--- a/tweets.html
+++ b/tweets.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
+  <link href="base.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <h1>First Day</h1>
