--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="base.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
 	<h1>First Day</h1>
        <p>The first day of the week</p>
 <h2>The second Day</h2>
